--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Ricardo Bastos</h1>
+  <h1>Ricardo carvalho Bastos</h1>
   <h2>idade</h2>
+  <h2>nascimento</h2>
 </body>
 </html>
