--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Ricardo carvalho Bastos</h1>
-  <h2>idade</h2>
+  <h2>idade dois</h2>
   <h2>nascimento</h2>
 </body>
 </html>
